# unicode-unicorn

./: .gitattributes  .gitignore  .prettierignore  CNAME  GraphemeBreakProperty.txt  NameAliases.txt  PropertyValueAliases.txt  README.md  UnicodeData.txt.REMOVED.git-id  ajaxfilesizes.xlsx  build.js  build.sh  clean.sh  compile-unicode-data.js  data.js  data.zip.REMOVED.git-id  doppelkopf.html  encode.js  graphemes.js  han.js  index.html  language-subtag-registry  licenses.html  notes.txt  package-lock.json  package.json  tsconfig.json  ui.js  unicode.html  webpack.config.js  workbox-config.js
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml  gh-pages.yml  gh_pages.yml  update_data.yml
Mappings/: mappings.txt
UCD/: BidiTest.txt.REMOVED.git-id  NamesList.txt.REMOVED.git-id  UnicodeData.txt.REMOVED.git-id
Unihan/: Unihan_DictionaryIndices.txt.REMOVED.git-id  Unihan_RadicalStrokeCounts.txt.REMOVED.git-id  Unihan_Readings.txt.REMOVED.git-id
cloudflare/: upload_public.sh
cloudflare/lsr/: script.js
complete_data/: encodings.txt  licenses.html  utf16-8bitBE.js  utf32-8bitLE.js  utf8.js
complete_data/Unicode/IVD/: IVD_Collections.txt  IVD_Sequences.txt.REMOVED.git-id
complete_data/Unicode/UCD/: USourceGlyphs.pdf.REMOVED.git-id  UnicodeData.txt.REMOVED.git-id
css/: stylesheet.css
data/: compile-unicode-data.js  compile-unicode-data.ts  data-types.ts  encodings.txt  language-subtag-registry  licenses.html  ucs2-16bit.js  ucs2-8bitBE.js  ucs2-8bitLE.js  utf16-16bit.js  utf16-8bitLE.js  utf32-32bit.js  utf32-8bitBE.js
docs/: index.html  licenses.html  min.css  min.js.REMOVED.git-id  unifont-12.1.02.ttf.REMOVED.git-id
docs/css/: stylesheet.css
docs/ts/: blocks.ts  compiled-data-declarations.ts  encode.ts  main.ts  search.ts  tests.ts  ui.ts
docs/ts/encode/: decode.ts  (+3 more)
docs/unicode-rustwasm/: Cargo.toml  build.rs
html/: index.html  licenses.html
js/: ajax.js  blocks.js  data.js  encode.js  graphemes.js  han.js  languages.js  search.js  tests.js  ui.js  variation-sequences.js
libs/: he.js  randomColor.js  utf8.js
public/: licenses.html  opensearch.xml
serve/: CNAME
src/: ajax.ts  blocks.js  blocks.ts  build.sh  compile-unicode-data.js  compiled-data.ts  compiled-data.ts.REMOVED.git-id  data.ts  encode.ts  graphemes.js  graphemes.ts  han.js  han.ts  index.html  index.ts  languages.ts  main.ts  polyfill.ts  search.js  search.ts  sentry.ts  style.css  tests.ts  ui.ts  variation-sequences.ts
src/chosen/: chosen.css  chosen.jquery.js  chosen.ts
ts/: ajax.ts  blocks.ts  compiled-data-declarations.ts  data.ts  graphemes.ts  languages.ts  main.ts  search.ts  tests.ts  variation-sequences.ts
ts/encode/: decode.ts  encode.ts  encoding-data.ts  format.ts
ts/ui/: codepage.ts  codepoint-modal.ts  codepoint-table.ts  colors.ts  encodings.ts  io.ts  length-table.ts  mojibake.ts  settings.ts  ui.ts
wasm/: Cargo.toml  README.md  build.rs
wasm/src/: codepoint_type.rs  data.rs  general_category.rs  lib.rs  utf_encodings.rs
(+34 files in other folders)
