[package]
name = "unicode-rustwasm"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2021"
description = "Rust Web Assembly module for Unicode Unicorn"
repository = "https://github.com/printfn/unicode-unicorn"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }

[build-dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
